# inventory_collector

./: .editorconfig  .env  .gitignore  README.md  comprehensive_fix_script.py  debug_test_runner.py  device_template.xlsx  final_import_fix.py  import_fix_script.py  main.spec  master_fix_script.py  pyproject.toml  pytest.ini  quick_fixes.py  requirements.txt  run.py  run_mock_server.py  setup.py  test_cleanup_and_fix.py  ~$device_template.xlsx
config/: vendors.yaml
demo/: demo_devices.xlsx  device_template.xlsx  prepare_demo.py
nvenv/: pyvenv.cfg
src/: command_runner.py  connection.py  device_manager.py  excel_handler.py  main.py
src/assets/: app.icns
src/configs/: command_configs.yaml
src/core/: command_runner.py  device_manager.py  inventory_collector.py  output_parser.py  ssh_connector.py
src/gui/: main_window.py
src/parsers/: base_parser.py  cisco_parser.py  hirschmann_parser.py
src/utils/: excel_handler.py
tests/: conftest.py  mock_ssh_server.py  test_command_runner.py  test_connection.py  test_device_manager.py  test_excel_handler.py  test_gui.py  test_helpers.py  test_integration_full.py  test_inventory_collector.py  test_parsers.py  test_ssh_connector.py  timing_helper.py
tests/configs/: mock_responses.yaml
tests/data/: empty_devices.xlsx  invalid_devices.xlsx  valid_devices.xlsx
tool/: pyvenv.cfg
